@@ -3,14 +3,22 @@ autom4te.cache
 aclocal.m4
 depcomp
 INSTALL
+Makefile
 Makefile.in
-config.h.in
 config.guess
+config.h
+config.h.in
+config.log
+config.status
 config.sub
 configure
 install-sh
+libtool
 ltmain.sh
 missing
+stamp-h1
+check/.deps
+lib/.deps
 m4/libtool.m4
 m4/lt~obsolete.m4
 m4/ltoptions.m4
@@ -18,5 +26,3 @@ m4/ltsugar.m4
 m4/ltversion.m4
 doc/mdate-sh
 doc/texinfo.tex
-lightning/Makefile.in
-tests/Makefile.in
